--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.FoodApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+<!--        <item name="android:statusBarColor">@color/black</item>-->
     </style>
 
     <style name="Theme.FoodApp" parent="Base.Theme.FoodApp" />
