--- a/app/src/main/res/drawable/plus_background.xml
+++ b/app/src/main/res/drawable/plus_background.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="rectangle">
         <solid android:color="@color/red"/>
-        <corners android:bottomRightRadius="15dp" android:topLeftRadius="15dp"/>
+        <corners android:bottomLeftRadius="15dp"/>
     </shape>
 </item>
 </selector>
