--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,61 +10,48 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="24dp">
 
             <ImageView
                 android:id="@+id/imageView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
-                android:layout_weight="1"
+                android:layout_width="300dp"
+                android:layout_height="160dp"
+                android:layout_marginTop="32dp"
                 app:srcCompat="@drawable/logo" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
+            <TextView
+                android:id="@+id/appTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="Food App"
+                android:textColor="@color/blue_grey"
+                android:textSize="36sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:text="Food"
-                    android:textColor="@color/blue_grey"
-                    android:textSize="45sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="App"
-                    android:textColor="@color/blue_grey"
-                    android:textSize="45sp" />
-            </LinearLayout>
+            <View
+                android:layout_width="80dp"
+                android:layout_height="4dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/red" />
 
             <EditText
                 android:id="@+id/userEdit"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_weight="1"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/editext_background"
-                android:ems="10"
                 android:hint="Email Address"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
+                android:padding="12dp"
                 android:textAlignment="center"
                 android:textColorHint="@color/blue_grey"
                 android:textSize="16sp" />
@@ -73,57 +60,64 @@
                 android:id="@+id/passEdit"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="32dp"
-                android:layout_weight="1"
                 android:background="@drawable/editext_background"
-                android:ems="10"
                 android:hint="Password"
                 android:inputType="textPassword"
+                android:padding="12dp"
                 android:textAlignment="center"
                 android:textColorHint="@color/blue_grey"
                 android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/signupBtn"
-                style="@android:style/Widget.Button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="32dp"
-                android:layout_weight="1"
+                android:layout_height="50dp"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/red_button_background"
+                android:elevation="6dp"
+                android:fontFamily="sans-serif"
                 android:text="Sign up"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="16dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="48dp"
+                android:background="@color/white"
+                android:elevation="4dp"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="8dp">
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/alreadyAccountText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Do you already have an account? "
-                    android:textAlignment="center"
-                    android:textSize="16sp" />
+                    android:text="Already have an account? "
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/loginBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:elevation="6dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:paddingStart="4dp"
                     android:text="Login"
+                    android:textAllCaps="true"
                     android:textColor="@color/red"
-                    android:layout_marginStart="8dp"
-                    android:textAlignment="center"
-                    android:textSize="16sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
