--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,13 +3,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#F75564</color>
+    <color name="gray_light">#FFBE35</color>
     <color name="blue_grey">#2E4068</color>
     <color name="grey">#F5F5F5</color>
     <color name="primary">#DDDDE9</color>
     <color name="primary_dark">#388E3C</color>
     <color name="accent">#FF5722</color>
     <color name="light_gray">#F5F5F5</color>
-    <color name="dark_gray">#757575</color>
+    <color name="dark_gray">#595959</color>
     <color name="gray">#9E9E9E</color>
     <color name="green">#43A047</color>
     <color name="favorite_red">#E53935</color>
