--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -43,16 +43,16 @@
 
                 <ImageView
                     android:id="@+id/backBtn"
-                    android:background="@drawable/circle_bg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
+                    android:background="@drawable/circle_bg"
                     android:padding="8dp"
-                    app:tint="@color/white"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/arrow" />
+                    app:srcCompat="@drawable/arrow"
+                    app:tint="@color/white" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -62,23 +62,25 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/titleTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="Title"
                     android:textColor="@color/blue_grey"
                     android:textSize="24sp"
-                    android:layout_weight="1"
                     android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/priceTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="$20"
                     android:textColor="@color/red"
-                    android:textStyle="bold"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -222,9 +224,6 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
         </LinearLayout>
 
     </ScrollView>
@@ -239,16 +238,16 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/addBtn"
+            style="@android:style/Widget.Button"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            style="@android:style/Widget.Button"
-            android:background="@drawable/red_button_background"
-            android:textColor="@color/white"
             android:layout_marginEnd="24dp"
-            android:paddingStart="16dp"
-            android:textSize="20sp"
+            android:background="@drawable/red_button_background"
             android:drawableStart="@drawable/cart"
+            android:paddingStart="16dp"
             android:text="Add to cart"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -259,8 +258,8 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
             android:layout_height="23dp"
             android:layout_marginStart="24dp"
             android:text="Total Price"
-            android:textSize="16sp"
             android:textColor="@color/blue_grey"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/addBtn" />
 
