--- a/app/src/main/res/layout/activity_list_foods.xml
+++ b/app/src/main/res/layout/activity_list_foods.xml
@@ -80,4 +80,18 @@
         app:layout_constraintStart_toStartOf="@+id/scrollView2"
         app:layout_constraintTop_toTopOf="@+id/scrollView2" />
 
+    <TextView
+        android:id="@+id/notListFoodTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="Not found"
+        android:textColor="@color/blue_grey"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
+        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
+        app:layout_constraintStart_toStartOf="@+id/scrollView2"
+        app:layout_constraintTop_toTopOf="@+id/scrollView2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
