--- a/app/src/main/res/drawable/cat_2_background.xml
+++ b/app/src/main/res/drawable/cat_2_background.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FC9D8B" />
-            <corners android:radius="10dp"/>
+            <stroke android:width="1dp" android:color="#D0B9B9" />
+            <corners android:radius="20dp" />
+            <solid android:color="#FFF3F3"/>
         </shape>
     </item>
 </selector>
