--- a/app/src/main/res/drawable/ic_favorite_border.xml
+++ b/app/src/main/res/drawable/ic_favorite_border.xml
@@ -4,6 +4,12 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@color/red"
-        android:pathData="M12,21.35l-1.45,-1.32C5.4,15.36 2,12.28 2,8.5c0,-3.03 2.46,-5.5 5.5,-5.5c1.74,0 3.41,0.81 4.5,2.09C13.09,3.81 14.76,3 16.5,3c3.04,0 5.5,2.47 5.5,5.5c0,3.78 -3.4,6.86 -8.55,11.54L12,21.35z" />
+        android:strokeColor="@color/red"
+        android:strokeWidth="1"
+        android:fillColor="@android:color/transparent"
+        android:pathData="M12,21.35l-1.45,-1.32C5.4,15.36 2,12.28 2,8.5
+                           2,5.42 4.42,3 7.5,3c1.74,0 3.41,0.81 4.5,2.09
+                           C13.09,3.81 14.76,3 16.5,3
+                           19.58,3 22,5.42 22,8.5
+                           c0,3.78 -3.4,6.86 -8.55,11.54L12,21.35z"/>
 </vector>
