--- a/app/src/main/res/layout/viewholder_category.xml
+++ b/app/src/main/res/layout/viewholder_category.xml
@@ -8,10 +8,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="vertical"
         android:layout_marginStart="8sp"
+        android:layout_marginTop="8dp"
+        android:elevation="5dp"
         android:layout_marginEnd="8sp"
+        android:background="@drawable/cat_2_background"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,20 +23,20 @@
         <ImageView
             android:id="@+id/imgCat"
             android:layout_width="72dp"
-            android:layout_height="72dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:padding="12dp"
-            android:background="@drawable/cat_0_background"
-            app:srcCompat="@drawable/btn_1" />
+            app:srcCompat="@drawable/btn_1"
+            app:tint="@color/black" />
 
         <TextView
             android:id="@+id/catNameTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
             android:text="title"
             android:textAlignment="center"
             android:textColor="@color/blue_grey"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
