--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -198,7 +198,7 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
                     android:layout_marginStart="16dp"
-                    android:background="@drawable/editext_background"
+                    android:background="@drawable/bg_edittext"
                     android:gravity="center"
                     android:text="-"
                     android:textColor="@color/red"
@@ -229,7 +229,7 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
                     android:layout_marginStart="8dp"
-                    android:background="@drawable/editext_background"
+                    android:background="@drawable/bg_edittext"
                     android:gravity="center"
                     android:text="+"
                     android:textColor="@color/red"
