--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="24dp"
-                android:background="@drawable/editext_background"
+                android:background="@drawable/bg_edittext"
                 android:hint="Email Address"
                 android:inputType="textEmailAddress"
                 android:padding="12dp"
@@ -58,7 +58,7 @@
                     android:id="@+id/passEdit"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:background="@drawable/editext_background"
+                    android:background="@drawable/bg_edittext"
                     android:hint="Password"
                     android:inputType="textPassword"
                     android:padding="12dp"
@@ -72,7 +72,7 @@
 
                 <ImageView
                     android:id="@+id/imgShow"
-                    android:src="@drawable/hidden"
+                    android:src="@drawable/ic_hidden"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     app:tint="@color/red"
@@ -151,7 +151,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
-                android:background="@color/white"
                 android:elevation="4dp"
                 android:gravity="center"
                 android:orientation="horizontal"
