--- a/app/src/main/res/layout/viewholder_cart.xml
+++ b/app/src/main/res/layout/viewholder_cart.xml
@@ -73,7 +73,7 @@
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:text="-"
-                android:background="@drawable/editext_background"
+                android:background="@drawable/bg_edittext"
                 android:gravity="center"
                 android:textColor="@color/red"
                 android:textStyle="bold"
@@ -102,7 +102,7 @@
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:text="+"
-                android:background="@drawable/editext_background"
+                android:background="@drawable/bg_edittext"
                 android:gravity="center"
                 android:textColor="@color/red"
                 android:textStyle="bold"
