--- a/app/src/main/res/layout/viewholder_best_deal.xml
+++ b/app/src/main/res/layout/viewholder_best_deal.xml
@@ -26,7 +26,7 @@
             android:id="@+id/saleTxt"
             android:layout_width="wrap_content"
             android:layout_height="39dp"
-            android:background="@drawable/plus_background"
+            android:background="@drawable/bg_plus"
             android:gravity="center"
             android:textStyle="bold"
             android:padding="5dp"
