--- a/app/src/main/res/layout/activity_list_foods.xml
+++ b/app/src/main/res/layout/activity_list_foods.xml
@@ -46,7 +46,7 @@
                 android:text="tilte"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                android:textColor="@color/blue_grey"
+                style="@style/textStyleColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:text="Not found"
-        android:textColor="@color/blue_grey"
+        style="@style/textStyleColor"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
