--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="Food App"
-                android:textColor="@color/blue_grey"
+                style="@style/textStyleColor"
                 android:textSize="32sp"
                 android:textStyle="bold" />
 
@@ -46,7 +46,7 @@
                 android:inputType="textEmailAddress"
                 android:padding="12dp"
                 android:textAlignment="center"
-                android:textColorHint="@color/blue_grey"
+                style="@style/textStyleColor"
                 android:textSize="16sp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -63,7 +63,7 @@
                     android:inputType="textPassword"
                     android:padding="12dp"
                     android:textAlignment="center"
-                    android:textColorHint="@color/blue_grey"
+                    style="@style/textStyleColor"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +114,7 @@
                 android:layout_marginTop="24dp"
                 android:gravity="center"
                 android:text="OR"
-                android:textColor="@color/blue_grey"
+                style="@style/textStyleColor"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -162,7 +162,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:text="You aren't a user? "
-                    android:textColor="@color/blue_grey"
+                    style="@style/textStyleColor"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
