--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,12 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:backgroundColor="@color/white"
+        app:backgroundColor="@color/bottom_bar_bg"
         app:cornerRadius="16dp"
         app:iconSize="30dp"
-        app:iconTint="@color/dark_gray"
-        app:iconTintActive="#FFFFFF"
-        app:indicatorColor="@color/blue_grey"
+        app:iconTint="@color/bottom_bar_icon"
+        app:iconTintActive="@color/bottom_bar_icon_active"
+        app:indicatorColor="@color/bottom_bar_indicator"
         app:indicatorRadius="16dp"
         app:itemPadding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
