--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Payment Account"
+            style="@style/textStyleColor"
             android:layout_centerInParent="true"
             android:textStyle="bold"
             android:textSize="18sp"/>
