--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -33,7 +33,7 @@
                 android:layout_marginTop="12dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="Food App"
-                android:textColor="@color/blue_grey"
+                style="@style/textStyleColor"
                 android:textSize="36sp"
                 android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
                 android:inputType="textEmailAddress"
                 android:padding="12dp"
                 android:textAlignment="center"
-                android:textColorHint="@color/blue_grey"
+                style="@style/textStyleColor"
                 android:textSize="16sp" />
 
             <EditText
@@ -66,7 +66,7 @@
                 android:inputType="textEmailAddress"
                 android:padding="12dp"
                 android:textAlignment="center"
-                android:textColorHint="@color/blue_grey"
+                style="@style/textStyleColor"
                 android:textSize="16sp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -83,7 +83,7 @@
                     android:inputType="textPassword"
                     android:padding="12dp"
                     android:textAlignment="center"
-                    android:textColorHint="@color/blue_grey"
+                    style="@style/textStyleColor"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Already have an account? "
-                    android:textColor="@color/black"
+                    style="@style/textStyleColor"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
