--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -16,7 +16,7 @@
         android:text="Your cart is Emty"
         android:visibility="gone"
         android:textStyle="bold"
-        android:textColor="@color/blue_grey"
+        style="@style/textStyleColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/srollViewCart"
         app:layout_constraintStart_toStartOf="@+id/srollViewCart"
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:text="Cart"
                 android:textAlignment="center"
-                android:textColor="@color/blue_grey"
+                style="@style/textStyleColor"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -89,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Order Summary"
+                style="@style/textStyleColor"
                 android:textColor="@color/blue_grey"
                 android:textSize="18sp"
 
