--- a/app/src/main/res/layout/viewholder_cart.xml
+++ b/app/src/main/res/layout/viewholder_cart.xml
@@ -34,7 +34,7 @@
             android:text="title"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="@color/blue_grey"
+            style="@style/textStyleColor"
             app:layout_constraintStart_toEndOf="@+id/pic"
             app:layout_constraintTop_toTopOf="@+id/pic" />
 
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="$0"
-            android:textColor="@color/blue_grey"
+            style="@style/textStyleColor"
 
             app:layout_constraintStart_toStartOf="@+id/titleTxt"
             app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
@@ -89,7 +89,7 @@
                 android:text="0"
                 android:gravity="center"
                 android:textSize="16sp"
-                android:textColor="@color/blue_grey"
+                style="@style/textStyleColor"
                 android:textStyle="bold"
 
                 app:layout_constraintBottom_toBottomOf="parent"
