--- a/app/src/main/res/layout/viewholder_list_food.xml
+++ b/app/src/main/res/layout/viewholder_list_food.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Tilte"
-                android:textColor="@color/black"
+                style="@style/textStyleColor"
                 android:textSize="16sp"
                 android:textStyle="bold"
 
