--- a/app/src/main/res/layout/viewholder_seach_recommend.xml
+++ b/app/src/main/res/layout/viewholder_seach_recommend.xml
@@ -37,7 +37,7 @@
             android:layout_marginEnd="26dp"
             android:layout_weight="1"
             android:text="TextView"
-            android:textColor="@color/blue_grey"
+            style="@style/textStyleColor"
             android:textSize="16sp" />
 
         <ImageView
