--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.FoodApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-<!--        <item name="android:statusBarColor">@color/black</item>-->
+
     </style>
 
+    <style name="textStyleColor">
+        <item name="android:textColor">@color/blue_grey</item>
+    </style>
+    <style name="button10">
+        <item name="android:background">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
     <style name="Theme.FoodApp" parent="Base.Theme.FoodApp" />
     <style name="textStyle" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/blue_grey</item>
