--- a/app/src/main/res/layout/viewholder_seach_recommend.xml
+++ b/app/src/main/res/layout/viewholder_seach_recommend.xml
@@ -27,7 +27,7 @@
             android:layout_height="30dp"
             android:padding="3dp"
             android:src="@drawable/search_icon"
-            app:tint="@color/black" />
+            app:tint="@color/buton_10" />
 
         <TextView
             android:id="@+id/searchRecommendTxt"
@@ -37,6 +37,7 @@
             android:layout_marginEnd="26dp"
             android:layout_weight="1"
             android:text="TextView"
+            app:tint="@color/buton_10"
             style="@style/textStyleColor"
             android:textSize="16sp" />
 
