--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#9B9B9B</color>
     <color name="pink">#FFF3F3</color>
+    <color name="green">#2AA952</color>
     <color name="red">#F75564</color>
     <color name="blue_grey">#2E4068</color>
+
     <color name="gray_light">#FFBE35</color>
     <color name="grey">#F0F0F0</color>
     <color name="primary">#DDDDE9</color>
@@ -12,8 +15,6 @@
     <color name="accent">#FF5722</color>
     <color name="light_gray">#F5F5F5</color>
     <color name="dark_gray">#595959</color>
-    <color name="gray">#9E9E9E</color>
-    <color name="green">#43A047</color>
     <color name="favorite_red">#E53935</color>
     <color name="gray_blue">#B0BEC5</color>
     <color name="blue">#B3E5FC</color>
